fix(box_packing): add line height to h3 in grid for overlapping box items
Fixes: #187

--- a/ichrisbirch/app/static/css/main.css
+++ b/ichrisbirch/app/static/css/main.css
@@ -10741,6 +10741,9 @@ nav a:hover {
   background-color: var(--clr-primary--darker);
   box-shadow: var(--floating-box-pressed);
 }
+.grid__item > h3 {
+  line-height: var(--space-l);
+}
 .grid--highlighted {
   background-color: var(--clr-primary--darker);
   box-shadow: var(--floating-box-pressed);
